# Nestor-Asset-Manager

./: .dockerignore  .env.example  .env.test  .flake8  .gitignore  AGENTS.md  README.md  docker-compose.yml  justfile  openspec.md  pyproject.toml
agentic/: pyproject.toml
agentic/agentic_tests/: conftest.py  test_agent_tools.py  test_bootstrap.py  test_chat_messages.py  test_chat_prompt.py  test_event_handler.py  test_runner_final_text.py  test_runner_stream.py  test_runner_streaming.py  test_runtime.py
agentic/agentic_tests/fixtures/boursorama/: calendar_listed_companies.html  calendar_macro.html  company_news_partial.html  etf_composition.html  global_hub.html  markets_list.html
agentic/agentic_tests/support/: helpers.py
agentic/agentic_tests/tools/: test_boursorama.py  test_calendar.py  test_embedding.py  test_memory_tools.py  test_portfolio_tools.py  test_registry.py  test_yahoo.py
agentic/nam_agentic/: __init__.py  agent_factory.py  bootstrap.py  checkpoint_url.py  context.py  dependencies.py  enums.py  factory.py  llm.py  main.py  runner.py  runtime.py  settings.py
agentic/nam_agentic/agents/: base.py  etf_quant.py  macro_strategist.py  portfolio_manager.py  sector_analyst.py
agentic/nam_agentic/backends/: __init__.py  shared.py
agentic/nam_agentic/prompts/: CHAT.md  ETF_QUANT.md  MACRO_STRATEGIST.md  PAGE_FORMATTER.md  PORTFOLIO.md  SECTOR_ANALYST.md  loader.py
agentic/nam_agentic/routers/: chat.py  chat_threads.py  events.py  health.py
agentic/nam_agentic/scheduler/: markets.py  scheduler.py  worker.py
agentic/nam_agentic/schemas/: chat.py  events.py
agentic/nam_agentic/services/: chat_messages.py  chat_prompt.py  checkpoint_messages.py  event_handler.py
agentic/nam_agentic/tools/: base.py  errors.py  registry.py  runtime.py
agentic/nam_agentic/tools/market/: __init__.py  fetch_calendar_from_bourso.py  get_asset_history_from_yf.py  get_asset_news_from_yf.py  get_asset_price_from_yf.py  get_company_financials_from_yf.py  get_data_from_url.py  get_etf_composition.py  get_financials_news.py  get_financials_news_from_bourso.py  search_boursorama.py  search_yahoo_symbol.py  update_index_boursorama.py  update_index_yahoo_symbol.py  yahoo_helpers.py
agentic/nam_agentic/tools/memory/: create_analysis.py  create_recommendation.py  search_past_analyses.py
agentic/nam_agentic/tools/portfolio/: __init__.py  create_index.py  get_index.py  get_positions.py  get_user_context.py  list_indices.py
agentic/nam_agentic/tools/schemas/: market.py  memory.py  portfolio.py
agentic/nam_agentic/tools/services/: analysis_search.py  embedding.py  market_price.py  news_item_store.py  news_search.py
agentic/nam_agentic/tools/services/boursorama/: __init__.py  calendar_fetch.py  calendar_markdown.py  calendar_parser.py  client.py  company_news_parser.py  errors.py  etf_composition_parser.py  feeds.py  ingest.py  list_parser.py  page_formatter.py  page_reader.py  resolver.py  search.py  urls.py
agentic/nam_agentic/tools/services/yahoo/: __init__.py  client.py  lookup.py  resolver.py
api/: pyproject.toml
api/nam_api/: __init__.py  dependencies.py  error_handlers.py  exceptions.py  main.py  settings.py
api/nam_api/routers/: analyses.py  chat_threads.py  indices.py  portfolio.py  profile.py  recommendations.py
api/nam_api/schemas/: __init__.py  analysis.py  chat.py  chat_thread.py  index.py  position.py  recommendation.py  transaction.py  user.py
api/nam_api/services/: __init__.py  agentic_client.py  analysis_service.py  chat_thread_service.py  index_service.py  position_calculator.py  position_service.py  recommendation_service.py  transaction_service.py  user_service.py
api/nam_api/websocket/: __init__.py  chat.py
api/tests/: conftest.py  factories.py
api/tests/api/: test_analyses_recommendations.py  test_chat_integration.py  test_chat_threads.py  test_chat_websocket.py  test_indices.py  test_positions.py  test_profile.py  test_transactions.py
api/tests/services/: test_index_service.py  test_transaction_service.py  test_user_service.py
api/tests/unit/: test_position_calculator.py
docker/: Dockerfile.front  Dockerfile.python
docker/tests/: Dockerfile.test  docker-compose.test.yml
front/: .env.example  .gitignore  README.md  orval.config.ts  package.json  pnpm-lock.yaml
front/app/: globals.css  layout.tsx  page.tsx
front/app/(app)/: layout.tsx
front/app/onboarding/: page.tsx
front/src/api/: mutator.ts
front/src/lib/: strategies.ts  useProfileGuard.ts
openspec/: config.yaml
openspec/changes/agent-runtime-service/: design.md  tasks.md
openspec/changes/agent-runtime-wiring/: design.md  (+2 more)
(+129 files in other folders)
