[project]
name = "nam-agentic"
version = "0.1.0"
description = "NAM agent runtime — FastAPI service, Deep Agents, market scheduler"
requires-python = ">=3.12"
dependencies = [
    "nam-db",
    "deepagents>=0.1",
    "langchain-ollama>=0.3",
    "apscheduler>=3.10",
    "pydantic-settings>=2.6",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nam_agentic"]
artifacts = ["nam_agentic/prompts/*.md"]

[tool.uv.sources]
nam-db = { workspace = true }
