[project]
name = "nam-api"
version = "0.1.0"
description = "NAM FastAPI REST and WebSocket entry point"
requires-python = ">=3.12"
dependencies = [
    "nam-db",
    "nam-agentic",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nam_api"]

[tool.uv.sources]
nam-db = { workspace = true }
nam-agentic = { workspace = true }
