[project]
name = "nam-api"
version = "0.1.0"
description = "NAM FastAPI REST and WebSocket entry point"
requires-python = ">=3.12"
dependencies = [
    "nam-db",
    "nam-yahoo",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nam_api"]

[tool.uv.sources]
nam-db = { workspace = true }
nam-yahoo = { workspace = true }
